Styling issues, don't scroll left and right on mobile, make links more obvious in the title

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  @apply dark:bg-gray-900;
 }
 
 #app {
